# guaraci

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  GUARACI.bat  LICENSE  MANUAL.md  README.md  README.pt-br.md  SECURITY.md  abrir_app.bat  app_quimiometria.py  avaliacao_modelos.py  chemometric_stats.py  classificadores.py  cli_assistente.py  config.example.yaml  conftest.py  dados_io.py  figuras.py  guaraci.py  guaraci_theme.py  hardware.py  iniciar_guaraci.bat  mkdocs.yml  paleta_cores.py  pineline_quimiometria_14.py  pipeline.py  pipeline_quimiometria_14.py  predicao.py  preprocessamento.py  pyproject.toml  requirements.txt  selecao_variaveis.py  validacao_estatistica.py
.github/: CLAUDE.md  dependabot.yml
.github/workflows/: docs.yml  draft-pdf.yml  test.yml
.streamlit/: config.toml
dados/: ACA-04-11-2020_T1.dx  ACA-04-11-2020_T2.dx  ACA-04-11-2020_T3.dx  AND-10-06-2020_T1.dx  AND-10-06-2020_T2.dx  AND-10-06-2020_T3.dx  BAB-09-10-2020_T1.dx  BAB-09-10-2020_T2.dx  BAB-09-10-2020_T3.dx  BCB-03-03-2020_EXTRA.dx  BCB-03-03-2020_EXTRA_2.dx  BCB-03-03-2020_EXTRA_3.dx  BCB-03-03-2020_T1.dx  BCB-03-03-2020_T2.dx  BCB-03-03-2020_T3.dx  BUR-05-07-2020_T1.dx  BUR-05-07-2020_T2.dx  BUR-05-07-2020_T3.dx  CAP-03-06-2020_T1.dx  CAP-03-06-2020_T2.dx  CAP-03-06-2020_T3.dx  COC-04-09-2020_T1.dx  COC-04-09-2020_T2.dx  COC-04-09-2020_T3.dx  COP-10-08-2020_T1.dx  COP-10-08-2020_T2.dx  COP-10-08-2020_T3.dx  GOI-04-09-2020_T1.dx  GOI-04-09-2020_T2.dx  GOI-04-09-2020_T3.dx  GRA-02-09-2020_T1.dx  GRA-02-09-2020_T2.dx  GRA-02-09-2020_T3.dx  MAR-08-10-2020_T1.dx  MAR-08-10-2020_T2.dx  MAR-08-10-2020_T3.dx  PAL-09-10-2020_T1.dx  PAL-09-10-2020_T2.dx  PAL-09-10-2020_T3.dx  PAT-02-01-2020_T1.dx  (+8 more)
docs/: BENCHMARK_TECATOR.md  CHANGELOG.md  COMMERCIAL.md  MANUAL.md  VALIDATION.md  index.md
docs/api/: chemometric_stats.md  classificadores.md  predicao.md  preprocessamento.md  selecao_variaveis.md  validacao_estatistica.md
notebooks/: guaraci_5_minutos.ipynb
paper/: paper.bib  paper.md
scripts/: benchmark_tecator.py
src/guaraci/: __init__.py  app_logic.py  avaliacao_modelos.py  chemometric_stats.py  classificadores.py  cli_assistente.py  cli_logic.py  config.py  config_io.py  dados_imagem.py  dados_io.py  design_tokens.py  figuras.py  guaraci.py  guaraci_theme.py  hardware.py  io_registry.py  log.py  model_registry.py  modos_analise.py  paleta_cores.py  pipeline.py  predicao.py  preprocessamento.py  reports.py  resultados_io.py  resumo_parse.py  selecao_variaveis.py  spectra_preview.py  validacao_estatistica.py
src/guaraci/app_tabs/: __init__.py  dados.py  modelo.py  predicao.py  preprocessamento.py  projeto.py  relatorios.py  sobre.py  validacao.py
tests/: test_app_logic.py  test_avaliacao_modelos.py  test_benchmark_tecator.py  test_classificadores.py  test_cli_logic.py  test_config_io.py  test_dados_imagem.py  test_dados_io_jcamp.py  test_dados_io_parsing.py  test_fachada_reexport.py  test_figuras.py  test_figuras_regressao.py  test_guaraci_cli.py  test_guaraci_config_accessors.py  test_guaraci_theme.py  test_hardware.py  test_heatmap_especie_adulterante.py  test_interfaces_configuraveis.py  test_io_registry.py  test_model_registry.py  test_modos_analise.py  test_paleta_cores.py  test_pipeline_core.py  test_pipeline_log_parsing_integration.py  test_pipeline_smoke.py  test_predicao.py  test_reports.py  test_resumo_parse.py  test_validacao_estatistica.py
