[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guaraci-chemometrics"
version = "31.0.0"
description = "GUARACI — multi-technique chemometrics platform for Amazonian matrices (group-aware validation)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Erley S. Costa", email = "erleysdacosta@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<4.0",
    "scipy>=1.10,<2.0",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.7,<4.0",
    "joblib>=1.3,<2.0",
    "threadpoolctl>=3.1,<4.0",
    "PyYAML>=6.0,<7.0",
    "rich>=13.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.35,<2.0", "psutil>=5.9,<7.0"]
reports = [
    "fpdf2>=2.7,<3.0",
    "python-docx>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",
    "python-pptx>=1.0,<2.0",
]
benchmark = ["xgboost>=1.7,<5.0", "shap>=0.42,<0.53"]
all = ["guaraci-chemometrics[web,reports,benchmark]"]

[project.scripts]
guaraci = "guaraci:main"

[project.urls]
Repository = "https://github.com/ErleySC/guaraci"

[tool.setuptools]
py-modules = [
    "pipeline", "guaraci", "cli_assistente", "app_quimiometria",
    "guaraci_theme", "design_tokens", "chemometric_stats",
    "paleta_cores", "dados_io", "preprocessamento", "classificadores",
    "figuras", "validacao_estatistica",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = [
    "slow: marks tests as slow — run with pytest -m slow",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning:sklearn",
]
